# sthai-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
sthai/: __init__.py  async_client.py  client.py  const.py  exceptions.py  models.py  typing.py
sthai/structs/: __init__.py  common.py  completions.py  embeddings.py  models.py  rerank.py
tests/: capture_fixtures.py  conftest.py  test_async_client.py  test_batch_embed.py  test_chat.py  test_client_core.py  test_embed.py  test_exceptions.py  test_helpers.py  test_public_api.py  test_rerank.py  test_response.py  test_structs.py
tests/fixtures/: batch_embed.json  chat_simple.json  chat_thinking.json  embed_multimodal.json  embed_single.json  error_bad_model.json  health.json  models.json  rerank.json  rerank_top_n.json  response_json_object.json  response_struct.json  response_truncated.json
