[project]
name = "sthai-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.21.1",
    "niquests>=3.20.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The project is not installed as a package; import sthai from the repo root
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]
